Aula 5 - CSS página principal

--- a/Atividades/exercicios/exercicio-01/pages/perfil/perfil.html
+++ b/Atividades/exercicios/exercicio-01/pages/perfil/perfil.html
@@ -9,21 +9,19 @@
 
 </head>
 
-<body style="background-color:rgb(247, 229, 226)">
+<body>
 
-    <header style="text-align: center; padding-top: 10px;">
-        <a href="../home/home.html" style="text-decoration: none; color:darkred; font-size:150%;">Home</a>
-        <a href="../lançamentos/laçamentos.html"
-            style="text-decoration: none; color:darkred; font-size:150%;">Lançamentos</a>
-        <a href="../cadastro/cadastro.html" style="text-decoration: none; color:darkred; font-size:150%;">Cadastro</a>
-        <a href="../relatorios/relatorios.html"
-            style="text-decoration: none; color:darkred; font-size:150%;">Relatórios</a>
-        <a href="../sair/sair.html" style="text-decoration: none; color:darkred; font-size:150%;">Sair</a>
+    <header>
+        <a href="../../../exercicio-02/home/home.html">Home</a>
+        <a href="../lançamentos/laçamentos.html">Lançamentos</a>
+        <a href="../cadastro/cadastro.html">Cadastro</a>
+        <a href="../relatorios/relatorios.html">Relatórios</a>
+        <a href="../sair/sair.html">Sair</a>
     </header>
 
     <div>
         <h1>Perfil</h1>
-        <img width="10%" src="../../img/avatar.jpg" alt="Avatar mulher">
+        <img width="10%" src="../../../exercicio-02/img/avatar.jpg" alt="Avatar mulher">
     </div>
 
     <p>Nome: Rafaela Silva Miranda</p>
