--- a/Atividades/exercicios/exercicio-01/pages/sair/sair.html
+++ b/Atividades/exercicios/exercicio-01/pages/sair/sair.html
@@ -6,15 +6,15 @@
     <title>Logout</title>
 </head>
 
-<body style="background-color:rgb(247, 229, 226)">
+<body>
 
    
-    <header style="text-align: center; padding-top: 10px;" >
-        <a href="../home/home.html" style="text-decoration: none; color:darkred; font-size:150%;">Home</a>
-        <a href="../lançamentos/laçamentos.html" style="text-decoration: none; color:darkred; font-size:150%;">Lançamentos</a>
-        <a href="../cadastro/cadastro.html" style="text-decoration: none; color:darkred; font-size:150%;">Cadastro</a>
-        <a href="../relatorios/relatorios.html" style="text-decoration: none; color:darkred; font-size:150%;">Relatórios</a>
-        <a href="../perfil/perfil.html" style="text-decoration: none; color:darkred; font-size:150%;">Perfil</a>
+    <header >
+        <a href="../../../exercicio-02/home/home.html">Home</a>
+        <a href="../lançamentos/laçamentos.html">Lançamentos</a>
+        <a href="../cadastro/cadastro.html">Cadastro</a>
+        <a href="../relatorios/relatorios.html">Relatórios</a>
+        <a href="../perfil/perfil.html">Perfil</a>
        
     </header>
 
