--- a/Atividades/exercicios/exercicio-01/pages/cadastro/cadastro.html
+++ b/Atividades/exercicios/exercicio-01/pages/cadastro/cadastro.html
@@ -7,15 +7,15 @@
     <title>Cadastro</title>
 </head>
 
-<body style="background-color:rgb(247, 229, 226)">
+<body>
 
 
-    <header style="text-align: center; padding-top: 10px;" >
-        <a href="../home/home.html" style="text-decoration: none; color:darkred; font-size:150%;">Home</a>
-        <a href="../lançamentos/laçamentos.html" style="text-decoration: none; color:darkred; font-size:150%;">Lançamentos</a>
-        <a href="../relatorios/relatorios.html" style="text-decoration: none; color:darkred; font-size:150%;">Relatórios</a>
-        <a href="../perfil/perfil.html" style="text-decoration: none; color:darkred; font-size:150%;">Perfil</a>
-        <a href="../sair/sair.html" style="text-decoration: none; color:darkred; font-size:150%;">Sair</a>
+    <header >
+        <a href="../../../exercicio-02/home/home.html">Home</a>
+        <a href="../lançamentos/laçamentos.html">Lançamentos</a>
+        <a href="../relatorios/relatorios.html">Relatórios</a>
+        <a href="../perfil/perfil.html">Perfil</a>
+        <a href="../sair/sair.html">Sair</a>
     </header>
 
 
@@ -53,7 +53,7 @@
         </div>
 
         <div>
-            <label for="nasc">Data de Nascimento: </label>
+            <label for="nasc">Data de Nascimento:</label>
             <input type="date" name="dataNasc" id="nasc" placeholder="  /  /    " minlength="8" maxlength="8">
         </div>
 
