--- a/Atividades/exercicios/exercicio-01/pages/lançamentos/laçamentos.html
+++ b/Atividades/exercicios/exercicio-01/pages/lançamentos/laçamentos.html
@@ -6,14 +6,14 @@
     <title>Lançamentos</title>
 </head>
 
-<body style="background-color:rgb(247, 229, 226)">
+<body>
 
-    <header style="text-align: center; padding-top: 10px;" >
-        <a href="../home/home.html" style="text-decoration: none; color:darkred; font-size:150%;">Home</a>
-        <a href="../relatorios/relatorios.html" style="text-decoration: none; color:darkred; font-size:150%;">Relatórios</a>
-        <a href="../cadastro/cadastro.html" style="text-decoration: none; color:darkred; font-size:150%;">Cadastro</a>
-        <a href="../perfil/perfil.html" style="text-decoration: none; color:darkred; font-size:150%;">Perfil</a>
-        <a href="../sair/sair.html" style="text-decoration: none; color:darkred; font-size:150%;">Sair</a>
+    <header  >
+        <a href="../../../exercicio-02/home/home.html">Home</a>
+        <a href="../relatorios/relatorios.html">Relatórios</a>
+        <a href="../cadastro/cadastro.html">Cadastro</a>
+        <a href="../perfil/perfil.html">Perfil</a>
+        <a href="../sair/sair.html">Sair</a>
     </header>
     
 </body>
