--- a/Atividades/exercicios/exercicio-01/pages/cadastro/cadastro.html
+++ b/Atividades/exercicios/exercicio-01/pages/cadastro/cadastro.html
@@ -14,7 +14,7 @@
         <a href="../../../exercicio-02/home/home.html">Home</a>
         <a href="../lançamentos/laçamentos.html">Lançamentos</a>
         <a href="../relatorios/relatorios.html">Relatórios</a>
-        <a href="../perfil/perfil.html">Perfil</a>
+        <a href="../../../exercicio-02/perfil/perfil.html">Perfil</a>
         <a href="../sair/sair.html">Sair</a>
     </header>
 
