--- a/Atividades/exercicios/exercicio-01/pages/lançamentos/laçamentos.html
+++ b/Atividades/exercicios/exercicio-01/pages/lançamentos/laçamentos.html
@@ -12,7 +12,7 @@
         <a href="../../../exercicio-02/home/home.html">Home</a>
         <a href="../relatorios/relatorios.html">Relatórios</a>
         <a href="../cadastro/cadastro.html">Cadastro</a>
-        <a href="../perfil/perfil.html">Perfil</a>
+        <a href="../../../exercicio-02/perfil/perfil.html">Perfil</a>
         <a href="../sair/sair.html">Sair</a>
     </header>
     
