--- a/Atividades/exercicios/exercicio-01/pages/sair/sair.html
+++ b/Atividades/exercicios/exercicio-01/pages/sair/sair.html
@@ -14,7 +14,7 @@
         <a href="../lançamentos/laçamentos.html">Lançamentos</a>
         <a href="../cadastro/cadastro.html">Cadastro</a>
         <a href="../relatorios/relatorios.html">Relatórios</a>
-        <a href="../perfil/perfil.html">Perfil</a>
+        <a href="../../../exercicio-02/perfil/perfil.html">Perfil</a>
        
     </header>
 
