Aula 7 - CSS paginas de cadastro, relatório e sair

--- a/Atividades/exercicios/exercicio-01/pages/relatorios/relatorios.html
+++ b/Atividades/exercicios/exercicio-01/pages/relatorios/relatorios.html
@@ -10,10 +10,10 @@
 
 
     <header>
-        <a href="../../../exercicio-02/home/home.html">Home</a>
+        <a href="../home/home.html">Home</a>
         <a href="../lançamentos/laçamentos.html">Lançamentos</a>
         <a href="../cadastro/cadastro.html">Cadastro</a>
-        <a href="../../../exercicio-02/perfil/perfil.html">Perfil</a>
+        <a href="../perfil/perfil.html">Perfil</a>
         <a href="../sair/sair.html">Sair</a>
     </header>
 
