--- a/Atividades/exercicios/exercicio-01/pages/sair/sair.html
+++ b/Atividades/exercicios/exercicio-01/pages/sair/sair.html
@@ -6,17 +6,29 @@
     <title>Logout</title>
 </head>
 
+
 <body>
 
-   
-    <header >
-        <a href="../../../exercicio-02/home/home.html">Home</a>
+    <header>
+        <a href="../home/home.html">Home</a>
         <a href="../lançamentos/laçamentos.html">Lançamentos</a>
         <a href="../cadastro/cadastro.html">Cadastro</a>
         <a href="../relatorios/relatorios.html">Relatórios</a>
-        <a href="../../../exercicio-02/perfil/perfil.html">Perfil</a>
-       
+        <a href="../perfil/perfil.html">Perfil</a>
+
     </header>
+
+    <div class="container">
+        <p>Deseja realmente sair ?</p>
+
+        <div class="container-button">
+
+            <button onclick="alert('O sistema será encerrado!')">SAIR</button>
+        
+            <button>CANCELAR</button>
+        </div>
+    </div>
+
 
 </body>
 
