--- a/Atividades/exercicios/exercicio-02/pages/perfil/perfil.html
+++ b/Atividades/exercicios/exercicio-02/pages/perfil/perfil.html
@@ -15,14 +15,14 @@
     <div class="container">
         <header>
             <a href="../home/home.html">Home</a>
-            <a href="../../exercicio-01/pages/lançamentos/laçamentos.html">Lançamentos</a>
-            <a href="../../exercicio-01/pages/cadastro/cadastro.html">Cadastro</a>
-            <a href="../../exercicio-01/pages/relatorios/relatorios.html">Relatórios</a>
-            <a href="../../exercicio-01/pages/sair/sair.html">Sair</a>
+            <a href="../lançamentos/laçamentos.html">Lançamentos</a>
+            <a href="../cadastro/cadastro.html">Cadastro</a>
+            <a href="../relatorios/relatorios.html">Relatórios</a>
+            <a href="../sair/sair.html">Sair</a>
         </header>
 
         <div class="container-perfil">
-            <h1>Perfil</h1>
+            <p>Perfil</p>
         </div>
 
         <div class="container-dados">
@@ -41,7 +41,7 @@
             </div>
 
             <div class="avatar">
-                <img src="../img/avatar.jpg" alt="Avatar mulher">
+                <img src="../../img/avatar.jpg" alt="Avatar mulher">
             </div>
         </div>
     </div>
