Aula 9 - Uso de bootstrap em formulários e tabelas

--- a/Atividades/exercicios/exercicio-01/pages/lancamentos/lancamentos.html
+++ b/Atividades/exercicios/exercicio-01/pages/lancamentos/lancamentos.html
@@ -3,43 +3,46 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Relatórios</title>
+    <title>Lançamentos</title>
 </head>
 
 <body>
 
-
-    <header>
+    <header  >
         <a href="../home/home.html">Home</a>
-        <a href="../lancamentos/lancamentos.html">Lançamentos</a>
+        <a href="../relatorios/relatorios.html">Relatórios</a>
         <a href="../cadastro/cadastro.html">Cadastro</a>
         <a href="../perfil/perfil.html">Perfil</a>
         <a href="../sair/sair.html">Sair</a>
     </header>
 
-    <br>
 
+    
     <table border="1">
 
-        <caption >Relatório</caption>
+        <caption >Relação de clientes e pedidos</caption>
 
         <thead>
 
             <tr>
                 <th>
-                    Nome
-                </th>
-
-                <th>
-                    Usuário
-                </th>
-
-                <th>
-                    E-mail
+                    Cliente
                 </th>
 
                 <th>
                     Contato
+                </th>
+
+                <th>
+                   Item
+                </th>
+
+                <th>
+                    Quantidade
+                </th>
+
+                <th>
+                    Valor unitário
                 </th>
 
             </tr>
@@ -50,48 +53,54 @@
 
             <tr>
                 <td>Rafaela Silva Miranda </td>
-                <td>rafaela_miranda</td>
-                <td>rafaela.miranda@aluno.ufop.edu.br</td>
                 <td>(41)99238-3848</td>
+                <td>Blusa tamanho P</td>
+                <td>2</td>
+                <td>R$20,00</td>
             </tr>
 
             <tr>
                 <td>Maria Jose</td>
-                <td>maria_jose</td>
-                <td>maria.jose@gmail.com</td>
                 <td>(27)99238-3498</td>
+                <td>Vestido longo</td>
+                <td>1</td>
+                <td>R$120,00</td>
             </tr>
 
             <tr>
                 <td>José</td>
-                <td>jose_anastacio</td>
-                <td>jose.anastacio@gmail.com</td>
                 <td>(41)99232-2848</td>
+                <td>Jaqueta Jeans</td>
+                <td>1</td>
+                <td>R$200,00</td>
             </tr>
 
             <tr>
                 <td>Gabriel Fialho</td>
-                <td>gabriel_fialho</td>
-                <td>gabriel.fialho@gmail.com</td>
                 <td>(41)92138-3648</td>
+                <td>Bermuda</td>
+                <td>3</td>
+                <td>R$60,00</td>
             </tr>
 
             <tr>
                 <td>Melissa</td>
-                <td>melissa_silva</td>
-                <td>melissa.silva@gmail.com</td>
                 <td>(41)99238-3848</td>
+                <td>Saia</td>
+                <td>2</td>
+                <td>R$15,00</td>
             </tr>
 
         </tbody>
 
         <tfoot>
 
-            <th colspan="4">Final do relatório</th>
+            <th colspan="5">Compras/Clientes</th>
 
         </tfoot>
     </table>
 
-</body>
 
+    
+</body>
 </html>
