--- a/Atividades/exercicios/exercicio-02/pages/sair/sair.html
+++ b/Atividades/exercicios/exercicio-02/pages/sair/sair.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header>
             <a href="../home/home.html">Home</a>
-            <a href="../lançamentos/laçamentos.html">Lançamentos</a>
+            <a href="../lancamentos/lancamentos.html">Lançamentos</a>
             <a href="../cadastro/cadastro.html">Cadastro</a>
             <a href="../relatorios/relatorios.html">Relatórios</a>
             <a href="../perfil/perfil.html">Perfil</a>
