--- a/Atividades/exercicios/exercicio-03/pages/perfil/perfil.html
+++ b/Atividades/exercicios/exercicio-03/pages/perfil/perfil.html
@@ -8,8 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Perfil</title>
 
-    <link rel="stylesheet" href="./perfil.css">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
@@ -18,7 +16,8 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm bg-light navbar-light justify-content-center">
+    <nav class="navbar navbar-expand-sm bg-light navbar-light justify-content-center"
+        style="font-size: 20px;">
 
         <!-- Links -->
         <ul class="navbar-nav">
@@ -26,13 +25,13 @@
                 <a class="nav-link" href="../home/home.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../lançamentos/laçamentos.html">Lançamentos</a>
+                <a class="nav-link" href="../lancamentos/lancamentos.html">Lançamentos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../relatorios/relatorios.html">Relatórios</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../cadastro/cadastro.css">Perfil</a>
+                <a class="nav-link" href="../cadastro/cadastro.html">Cadastro</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../sair/sair.html">Sair</a>
@@ -43,14 +42,9 @@
 
     </nav>
 
-    <div class="container-perfil">
-        <h1>Perfil</h1>
-    </div>
-
-    <div class="container">
-
+    <div class="container w-50">
     
-        <div class="card" style="width:500px">
+        <div class="card align-items-center my-5 border border-dark rounded shadow bg-white rounded">
             <img class="card-img-top" src="../../img/avatar.jpg" alt="Card image" style="width:60%">
             <div class="card-body">
                 <h4 class="card-title"> Rafaela Silva Miranda</h4>
