--- a/Atividades/exercicios/exercicio-01/pages/cadastro/cadastro.html
+++ b/Atividades/exercicios/exercicio-01/pages/cadastro/cadastro.html
@@ -12,7 +12,7 @@
 
     <header >
         <a href="../home/home.html">Home</a>
-        <a href="../lançamentos/laçamentos.html">Lançamentos</a>
+        <a href="../lancamentos/lancamentos.html">Lançamentos</a>
         <a href="../relatorios/relatorios.html">Relatórios</a>
         <a href="../perfil/perfil.html">Perfil</a>
         <a href="../sair/sair.html">Sair</a>
