--- a/Atividades/exercicios/exercicio-01/pages/perfil/perfil.html
+++ b/Atividades/exercicios/exercicio-01/pages/perfil/perfil.html
@@ -13,7 +13,7 @@
 
     <header>
         <a href="../home/home.html">Home</a>
-        <a href="../lançamentos/laçamentos.html">Lançamentos</a>
+        <a href="../lancamentos/lancamentos.html">Lançamentos</a>
         <a href="../cadastro/cadastro.html">Cadastro</a>
         <a href="../relatorios/relatorios.html">Relatórios</a>
         <a href="../sair/sair.html">Sair</a>
