--- a/Atividades/exercicios/exercicio-01/pages/sair/sair.html
+++ b/Atividades/exercicios/exercicio-01/pages/sair/sair.html
@@ -11,7 +11,7 @@
 
     <header>
         <a href="../home/home.html">Home</a>
-        <a href="../lançamentos/laçamentos.html">Lançamentos</a>
+        <a href="../lancamentos/lancamentos.html">Lançamentos</a>
         <a href="../cadastro/cadastro.html">Cadastro</a>
         <a href="../relatorios/relatorios.html">Relatórios</a>
         <a href="../perfil/perfil.html">Perfil</a>
