--- a/Atividades/exercicios/exercicio-03/pages/home/home.html
+++ b/Atividades/exercicios/exercicio-03/pages/home/home.html
@@ -10,7 +10,6 @@
 
     <title>Sistema de Banco de Dados Web</title>
 
-    <link rel="stylesheet" href="./home.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -30,15 +29,15 @@
 
 
     <div class="container-nav">
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center"  style="font-size: 25px;">
 
                 <!-- Links -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../cadastro/cadastro.css">Home</a>
+                        <a class="nav-link" href="../cadastro/cadastro.html">Cadastro</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../lançamentos/laçamentos.html">Lançamentos</a>
+                        <a class="nav-link" href="../lancamentos/lancamentos.html">Lançamentos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../relatorios/relatorios.html">Relatórios</a>
