--- a/Atividades/exercicios/exercicio-03/pages/lancamentos/lancamentos.html
+++ b/Atividades/exercicios/exercicio-03/pages/lancamentos/lancamentos.html
@@ -4,15 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Relatórios</title>
+    <title>Lançamentos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
 
 </head>
 
 <body>
-
 
     <nav class="navbar navbar-expand-sm bg-light navbar-light justify-content-center"
         style="font-size: 20px;">
@@ -23,7 +21,7 @@
                 <a class="nav-link" href="../home/home.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../lancamentos/lancamentos.html">Lançamentos</a>
+                <a class="nav-link" href="../relatorios/relatorios.html">Relatórios</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../cadastro/cadastro.html">Cadastro</a>
@@ -44,25 +42,30 @@
 
             <table class="table">
 
-                <caption style="text-align: center; font-size: 20px;">Relatório</caption>
+                <caption style="text-align: center; font-size: 20px;">Relação de clientes e pedidos</caption>
 
                 <thead class="table-primary">
 
-                    <tr >
-                        <th>
-                            Nome
-                        </th>
 
+                    <tr>
                         <th>
-                            Usuário
-                        </th>
-
-                        <th>
-                            E-mail
+                            Cliente
                         </th>
 
                         <th>
                             Contato
+                        </th>
+
+                        <th>
+                            Item
+                        </th>
+
+                        <th>
+                            Quantidade
+                        </th>
+
+                        <th>
+                            Valor unitário
                         </th>
 
                     </tr>
@@ -73,51 +76,55 @@
 
                     <tr>
                         <td>Rafaela Silva Miranda </td>
-                        <td>rafaela_miranda</td>
-                        <td>rafaela.miranda@aluno.ufop.edu.br</td>
                         <td>(41)99238-3848</td>
+                        <td>Blusa tamanho P</td>
+                        <td>2</td>
+                        <td>R$20,00</td>
                     </tr>
 
                     <tr>
                         <td>Maria Jose</td>
-                        <td>maria_jose</td>
-                        <td>maria.jose@gmail.com</td>
                         <td>(27)99238-3498</td>
+                        <td>Vestido longo</td>
+                        <td>1</td>
+                        <td>R$120,00</td>
                     </tr>
 
                     <tr>
                         <td>José</td>
-                        <td>jose_anastacio</td>
-                        <td>jose.anastacio@gmail.com</td>
                         <td>(41)99232-2848</td>
+                        <td>Jaqueta Jeans</td>
+                        <td>1</td>
+                        <td>R$200,00</td>
                     </tr>
 
                     <tr>
                         <td>Gabriel Fialho</td>
-                        <td>gabriel_fialho</td>
-                        <td>gabriel.fialho@gmail.com</td>
                         <td>(41)92138-3648</td>
+                        <td>Bermuda</td>
+                        <td>3</td>
+                        <td>R$60,00</td>
                     </tr>
 
                     <tr>
                         <td>Melissa</td>
-                        <td>melissa_silva</td>
-                        <td>melissa.silva@gmail.com</td>
                         <td>(41)99238-3848</td>
+                        <td>Saia</td>
+                        <td>2</td>
+                        <td>R$15,00</td>
                     </tr>
 
                 </tbody>
 
                 <tfoot>
 
-                    <th colspan="4" style="text-align: center;">Final do relatório</th>
+                    <th colspan="5" style="text-align: center;">Compras/Clientes</th>
 
                 </tfoot>
             </table>
-
         </div>
-    </div>
 
+    </div>
 
 </body>
 
