Implementação da página 02-imc

--- a/Atividades/atividade-pratica-01/01-corrida/01-corrida.html
+++ b/Atividades/atividade-pratica-01/01-corrida/01-corrida.html
@@ -27,7 +27,7 @@
 
                 <div class="row">
                     <div class="col-5">
-                        <label class="font-" for="nome">Nome do competidor:</label>
+                        <label  for="nome">Nome do competidor:</label>
                         <input type="text" name="nomeJogador" id="nome" class="form-control" >
                     </div>
                     <div class="col-5 ">
